# Kronk_Fastapi_Production

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  google-services.json  json_logs.json  json_logs.json.1  json_logs.json.2  logs.txt  logs.txt.1  logs.txt.2  pyproject.toml  supervisord.conf
backend/app/: main.py
backend/app/community_app/: crud.py  models.py  tasks.py
backend/app/core/: celery.py  config.py  database.py  dependency.py  header_credentials.py  minio_client.py  my_database.py  my_middleware.py  my_minio.py  my_redis.py
backend/app/education_app/: models.py  routes.py
backend/app/users_app/: crud.py  models.py  routes.py  schemas.py  tasks.py
backend/app/utility/: decorator.py  validators.py
nginx/: default.conf
prometheus/: prometheus.yml
